# bagger

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  P0_COST_MULTISOURCE_DESIGN.md  README.md  overview.md  pyproject.toml
.github/workflows/: ci.yml
app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
bagger/: __init__.py  __main__.py  config.py
bagger/api/: __init__.py  app.py  dependencies.py
bagger/api/routes/: health.py  search.py  sessions.py  stats.py  sync.py
bagger/cli/: main.py
bagger/exporters/: base.py  jsonl.py
bagger/models/: event.py
bagger/parser/: __init__.py  base.py  claude.py
bagger/services/: replay.py  scanner.py  search.py  sync.py  watcher.py
bagger/storage/: __init__.py  base.py  sqlite.py
design/: architecture-review.md  bagger-ui-design.html  color-system.md  overview.md
design-system/: DESIGN_SYSTEM.md  README.md  components.css  preview.html  tokens.css
scripts/: backfill_tool_uses.py  build-backend.py
src/bagger/: __init__.py
src/bagger/parser/: claude.py
src/bagger/services/: replay.py  scanner.py  watcher.py
tests/: test_api.py  test_cli.py  test_parser.py  test_storage.py  test_sync.py
tests/fixtures/: sample_session.jsonl
ui/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
ui/scripts/: generate-icons.js
ui/src/: App.tsx  index.css  main.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: main.rs
ui/src/components/: AppBar.tsx  ContentBlock.tsx  ConversationView.tsx  EmptyState.tsx  ErrorBlock.tsx  Layout.tsx  Logo.tsx  MessageBubble.tsx  MetricCard.tsx  SearchBar.tsx  SearchResults.tsx  SessionCard.tsx  SessionRow.tsx  SessionTree.tsx  StatusBar.tsx
ui/src/components/ui/: button.tsx
ui/src/hooks/: useSearch.ts  useSessions.ts  useStats.ts
ui/src/hooks/__tests__/: useSearch.test.tsx  useSessions.test.tsx  useStats.test.tsx
ui/src/lib/: api.ts  utils.ts
ui/src/lib/__tests__/: api.test.ts
ui/src/pages/: HomePage.tsx  ImportPage.tsx  ProjectsPage.tsx  SearchPage.tsx  SessionDetailPage.tsx  SessionsPage.tsx  SettingsPage.tsx  StatsPage.tsx
~/.cache/pre-commit/: db.db
