[project]
name = "bagger"
version = "0.1.0"
description = "AI Coding Agent Data Collector — sync Claude Code JSONL transcripts to a searchable local database"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "httpx>=0.27",  # required by FastAPI TestClient
]
web = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
]
bundle = [
    "pyinstaller>=6.0",
]

[project.scripts]
bagger = "bagger.cli.main:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    "ui",          # Tauri/React frontend — not Python
    "design",      # Static design assets
    "build",       # PyInstaller output
    "dist",        # Tauri build output
    ".workbuddy",  # Agent workspace
]

[tool.ruff.lint]
# Curated rule set — opinionated but not noisy.
#   E   pycodestyle errors
#   F   pyflakes (undefined names, unused imports, ...)
#   I   isort (import ordering)
#   UP  pyupgrade (modernize syntax: Optional[X] -> X | None, etc.)
#   B   flake8-bugbear (common pitfalls)
#   SIM flake8-simplify (cleaner idioms)
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Tests get a little more leeway.
"tests/**/*.py" = ["E501"]

[tool.ruff.format]
# Drop None/True/False from type annotations (PEP 604 / 484 style).
quote-style = "double"
indent-style = "space"
